[SELC-5970] Fix unit tests